# iedr-utiliy-data-Sai-Avinash-Polina

./: .gitignore  README.md  conftest.py  databricks.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
config/: pipeline.yaml
config/utilities/: utility1.yaml  utility2.yaml
docs/: architecture.md  data_dictionary.md  design_decisions.md  runbook.md
notebooks/bronze/: bronze_ingest.py
notebooks/platinum/: platinum_tables.py
notebooks/silver/: silver_transformation.py
resources/: iedr_pipeline.yml
src/iedr/: __init__.py
src/iedr/bronze/: __init__.py  ingest.py
src/iedr/common/: __init__.py  config.py  context.py  expectations.py  schemas.py
src/iedr/platinum/: __init__.py  build.py
src/iedr/silver/: __init__.py  pipeline.py
src/iedr/silver/adapters/: __init__.py  base.py  utility1.py  utility2.py
tests/: conftest.py
tests/fixtures/: utility1_circuits.csv  utility1_install_der.csv  utility1_planned_der.csv  utility2_circuits.csv  utility2_install_der.csv  utility2_planned_der.csv
tests/integration/: test_end_to_end.py
tests/unit/: test_config.py  test_context.py  test_expectations.py  test_silver_adapters.py
