[project]
name = "iedr"
version = "0.2.0"
description = "Utility Data Lakehouse for the NY Integrated Energy Data Resource (IEDR)"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pyspark==3.5.0",
    "delta-spark==3.1.0",
    "ruff>=0.1.0",
]
serving = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "databricks-sql-connector>=3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"iedr" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "integration: end-to-end tests (full bronze→silver→platinum chain)",
    "unit: fast unit tests for individual transforms",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]